# jothabot

./: .gitignore  README.md  app.py  faq_indexer.py  legal_indexer.py  planos_indexer.py  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
data/: faq.csv
vectorstore/faq_index/: index.faiss  index.pkl
vectorstore/legal_index/: index.faiss  index.pkl
vectorstore/planos_index/: index.faiss
