[project]
name = "jotha2"
version = "0.1.0"
description = ""
authors = [
    {name = "Jothamarcelino",email = "jothamarcelino@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "groq (>=0.28.0,<0.29.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
